--- a/assignments/angular-training/index.html
+++ b/assignments/angular-training/index.html
@@ -11,8 +11,11 @@
     <div class="container">
         <div class="container-fluid">
             <div class="row" ng-controller="transactions">
-                <div class="col-lg-12" ng-repeat="post in transactions.transactions">
-                    <div class="col-lg-1">{{post.id}}</div>
+                <div class="col-lg-12" ng-repeat="post in transactions.transactions" ng-include="getTemplate(post)">
+
+                </div>
+
+                <div ng-repeat="post in items">
                     <div class="col-lg-2">{{post.payer}}</div>
                     <div class="col-lg-2">{{post.payee}}</div>
                     <div class="col-lg-2">{{post.amount}}</div>
@@ -22,6 +25,94 @@
                     <div class="col-lg-1">{{post.type}}</div>
 
                 </div>
+                <div class="col-lg-12" ng-repeat="itemToAdd in itemsToAdd">
+                    <div class="col-lg-2">
+                        <input type="text" ng-model="itemToAdd.payer" />
+                    </div>
+                    <div class="col-lg-2">
+                        <input type="text" ng-model="itemToAdd.payee" />
+                    </div>
+                    <div class="col-lg-2">
+                        <input type="text" ng-model="itemToAdd.amount" />
+                    </div>
+                    <div class="col-lg-2">
+                        <input type="text" ng-model="itemToAdd.date" />
+                    </div>
+                    <div class="col-lg-1">
+                        <input type="text" ng-model="itemToAdd.modeOfPayment" />
+                    </div>
+                    <div class="col-lg-1">
+                        <input type="text" ng-model="itemToAdd.notes" />
+                    </div>
+                    <div class="col-lg-1">
+                        <input type="text" ng-model="itemToAdd.type" />
+                    </div>
+
+                    <div class="col-lg-1">
+                        <button ng-click="add(itemToAdd)">Add</button>
+                    </div>
+
+                </div>
+                <div>
+                    <button ng-click="addNew()">Add new</button>
+                </div>
+
+
+                <script type="text/ng-template" id="display">
+                    <div class="col-lg-2">{{post.payer}}</div>
+                    <div class="col-lg-2">{{post.payee}}</div>
+                    <div class="col-lg-2">{{post.amount}}</div>
+                    <div class="col-lg-2">{{post.date}}</div>
+                    <div class="col-lg-1">{{post.modeOfPayment}}</div>
+                    <div class="col-lg-1">{{post.notes}}</div>
+                    <div class="col-lg-1">{{post.type}}</div>
+                    <div class="col-lg-1">
+                        <button ng-click="editContact(post)">Edit</button>
+                    </div>
+                </script>
+                <script type="text/ng-template" id="edit">
+                    <div class="col-lg-2">
+                        <input type="text" ng-model="transactions.selected.payer" />
+                    </div>
+                    <div class="col-lg-2">
+                        <input type="text" ng-model="transactions.selected.payee" />
+                    </div>
+                    <div class="col-lg-2">
+                        <input type="text" ng-model="transactions.selected.amount" />
+                    </div>
+                    <div class="col-lg-2">
+                        <input type="text" ng-model="transactions.selected.date" />
+                    </div>
+                    <div class="col-lg-1">
+                        <input type="text" ng-model="transactions.selected.modeOfPayment" />
+                    </div>
+                    <div class="col-lg-1">
+                        <input type="text" ng-model="transactions.selected.notes" />
+                    </div>
+                    <div class="col-lg-1">
+                        <input type="text" ng-model="transactions.selected.type" />
+                    </div>
+                    <div class="col-lg-1">
+                        <button ng-click="saveContact($index)">Save</button>
+                        <button ng-click="reset()">Cancel</button>
+                    </div>
+                </script>
+
+
+
+
+
+                <!--<div class="col-lg-12" ng-repeat="post in transactions.transactions">
+                    <div class="col-lg-1">{{post.id}}</div>
+                    <div class="col-lg-2">{{post.payer}}</div>
+                    <div class="col-lg-2">{{post.payee}}</div>
+                    <div class="col-lg-2">{{post.amount}}</div>
+                    <div class="col-lg-2">{{post.date}}</div>
+                    <div class="col-lg-1">{{post.modeOfPayment}}</div>
+                    <div class="col-lg-1">{{post.notes}}</div>
+                    <div class="col-lg-1">{{post.type}}</div>
+
+                </div>-->
             </div>
         </div>
         <script type="text/javascript" src="js/app.js"></script>
