--- a/assignments/angular-training/index.html
+++ b/assignments/angular-training/index.html
@@ -102,7 +102,7 @@
 
 
 
-                <!--<div class="col-lg-12" ng-repeat="post in transactions.transactions">
+                <div class="col-lg-12" ng-repeat="post in income.transactions">
                     <div class="col-lg-1">{{post.id}}</div>
                     <div class="col-lg-2">{{post.payer}}</div>
                     <div class="col-lg-2">{{post.payee}}</div>
@@ -112,7 +112,7 @@
                     <div class="col-lg-1">{{post.notes}}</div>
                     <div class="col-lg-1">{{post.type}}</div>
 
-                </div>-->
+                </div>
             </div>
         </div>
         <script type="text/javascript" src="js/app.js"></script>
