--- a/assignments/angular-training/index.html
+++ b/assignments/angular-training/index.html
@@ -116,6 +116,8 @@
             </div>
         </div>
         <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/app/controllers/expense_controller.js"></script>
+        
 
 </body>
 
